--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,9 @@
     "copy-html-entry": "cp ../gameplan/public/frontend/index.html ../gameplan/www/g.html",
     "serve": "vite preview",
     "test-local": "cypress open --e2e --browser chrome",
-    "test": "cypress run --record --key 9c23c39a-b56b-46d5-b673-44faf1f1da83"
+    "test": "cypress run --record --key 9c23c39a-b56b-46d5-b673-44faf1f1da83",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "format": "prettier --write src/"
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.14",
@@ -31,13 +33,19 @@
     "cypress": "10.11.0",
     "lucide-static": "^0.257.0",
     "postcss": "^8.4.5",
-    "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "rollup-plugin-visualizer": "^5.8.2",
     "tailwindcss": "^3.4.15",
     "unplugin-icons": "^0.15.1",
     "unplugin-vue-components": "^0.25.0",
     "vite": "^4.4.9",
-    "vue-template-compiler": "^2.7.14"
+    "vue-template-compiler": "^2.7.14",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "@vue/eslint-config-prettier": "^7.0.0",
+    "@vue/eslint-config-typescript": "^11.0.0",
+    "eslint": "^8.0.0",
+    "eslint-plugin-vue": "^9.0.0",
+    "prettier": "^2.8.0"
   }
 }
