--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,7 @@
     "@vue/eslint-config-typescript": "^11.0.0",
     "eslint": "^8.0.0",
     "eslint-plugin-vue": "^9.0.0",
-    "prettier": "^2.8.0"
+    "prettier": "^2.8.0",
+    "vite-plugin-pwa": "^0.15.0"
   }
 }
