--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
     "private": true,
-    "aworkspaces": ["frontend", "frappe-ui"],
+    "aworkspaces": [
+        "frontend",
+        "frappe-ui"
+    ],
     "scripts": {
         "postinstall": "cd frontend && yarn install",
         "dev": "cd frontend && yarn dev",
@@ -9,5 +12,8 @@
         "enable-workspaces": "sed -i '' 's/\"aworkspaces\"/\"workspaces\"/g' package.json && rm -rf node_modules ./frontend/node_modules/ frappe-ui/node_modules/ && yarn install",
         "upgrade-frappeui": "cd frontend && yarn add frappe-ui@latest && cd ..",
         "disable-workspaces-and-upgrade-frappeui": "yarn disable-aworkspaces && yarn upgrade-frappeui"
+    },
+    "devDependencies": {
+        "vite-plugin-pwa": "0.15.0"
     }
 }
