--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,26 +27,26 @@
   },
   "devDependencies": {
     "@tailwindcss/container-queries": "^0.1.1",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vitejs/plugin-vue-jsx": "^3.0.1",
+    "@vue/eslint-config-prettier": "^7.0.0",
+    "@vue/eslint-config-typescript": "^11.0.0",
     "autoprefixer": "^10.4.2",
     "cypress": "10.11.0",
+    "eslint": "^8.0.0",
+    "eslint-plugin-vue": "^9.0.0",
     "lucide-static": "^0.257.0",
     "postcss": "^8.4.5",
+    "prettier": "^2.8.0",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "rollup-plugin-visualizer": "^5.8.2",
     "tailwindcss": "^3.4.15",
     "unplugin-icons": "^0.15.1",
     "unplugin-vue-components": "^0.25.0",
-    "vite": "^4.4.9",
-    "vue-template-compiler": "^2.7.14",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "@vue/eslint-config-prettier": "^7.0.0",
-    "@vue/eslint-config-typescript": "^11.0.0",
-    "eslint": "^8.0.0",
-    "eslint-plugin-vue": "^9.0.0",
-    "prettier": "^2.8.0",
-    "vite-plugin-pwa": "^0.15.0"
+    "vite": "^6.0.3",
+    "vite-plugin-pwa": "^0.15.0",
+    "vue-template-compiler": "^2.7.14"
   }
 }
