--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ description = "Team discussion and collaboration tool"
 requires-python = ">=3.10"
 readme = "README.md"
 dynamic = ["version"]
-dependencies = ["rembg>=2.0.49,<2.1", "numpy==1.26.1", "onnxruntime==1.17.3"]
+dependencies = []
 
 [build-system]
 requires = ["flit_core >=3.4,<4"]
